objects/PRX_Approvals__c.object
<CustomObject>
    <fields>
        <fullName>Days_Open__c</fullName>
        <formula>IF(NOT(ISNULL(End_Date_Level_1__c ))  &amp;&amp;  ISNULL(End_Date_Level_2__c )  &amp;&amp;  ISNULL(End_Date_Level_3__c ), (DATEVALUE(End_Date_Level_1__c) -DATEVALUE(CreatedDate)) , 

IF(NOT(ISNULL(End_Date_Level_1__c ))  &amp;&amp;  NOT(ISNULL(End_Date_Level_2__c ))  &amp;&amp;  ISNULL(End_Date_Level_3__c ), (DATEVALUE(End_Date_Level_2__c) -DATEVALUE(CreatedDate)) , 

IF(NOT(ISNULL(End_Date_Level_1__c ))  &amp;&amp;  NOT(ISNULL(End_Date_Level_2__c ))  &amp;&amp;  NOT(ISNULL(End_Date_Level_3__c )), (DATEVALUE(End_Date_Level_3__c) -DATEVALUE(CreatedDate)) , 

0 

) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date_Level_1__c</fullName>
        <label>First Response Date Level 1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Date_Level_2__c</fullName>
        <label>First Response Date Level 2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Date_Level_3__c</fullName>
        <label>First Response Date Level 3</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PRX_Approval_Type__c</fullName>
        <description>Approval Types</description>
        <inlineHelpText>Approval Types</inlineHelpText>
        <label>Approval Type</label>
        <picklist>
            <picklistValues>
                <fullName>Pricing Telco Fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing Telco Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing ICT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance CORP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complex Bid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Check</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRX_Committee_Escalation__c</fullName>
        <label>Pricing Committee Escalation</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRX_Complex_Bid_Approval__c</fullName>
        <label>Complex Bid Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Awaiting Outcome</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRX_Complex_Bid_Escalation__c</fullName>
        <label>Complex Bid Escalation</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRX_Final_Status__c</fullName>
        <label>Final Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRX_Finance_Approval__c</fullName>
        <label>Finance Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Awaiting Outcome</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRX_Finance_Escalation__c</fullName>
        <label>Finance Escalation</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRX_Financial_Risk__c</fullName>
        <label>Financial Risk</label>
        <picklist>
            <picklistValues>
                <fullName>Awaiting Outcome</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRX_Legal_Approval__c</fullName>
        <label>Legal Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Awaiting Outcome</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRX_Legal_Escalation_1__c</fullName>
        <label>Legal Escalation</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRX_Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Approval</relationshipLabel>
        <relationshipName>Approval</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>PRX_Pricing_Approval_Outcome__c</fullName>
        <label>Pricing Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Awaiting Outcome</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRX_Pricing_Director_Escalation__c</fullName>
        <label>Pricing Director Escalation</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRX_Technical_approval__c</fullName>
        <label>Technical approval</label>
        <picklist>
            <picklistValues>
                <fullName>Awaiting Outcome</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Approvals</label>
    <nameField>
        <label>Approvals Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approvals</pluralLabel>
    <recordTypes>
        <fullName>Complex_Bid</fullName>
        <active>true</active>
        <description>Chatter Group(s) - Complex Bid</description>
        <label>Complex Bid</label>
    </recordTypes>
    <recordTypes>
        <fullName>Finance</fullName>
        <active>true</active>
        <description>Chatter Group(s) - Finance ME, Finance CORP</description>
        <label>Finance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Financial_Risk</fullName>
        <active>true</active>
        <description>Chatter Group(s) - Credit Check</description>
        <label>Financial Risk</label>
    </recordTypes>
    <recordTypes>
        <fullName>Legal</fullName>
        <active>true</active>
        <description>Chatter Group(s) - Legal Approval</description>
        <label>Legal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pricing</fullName>
        <active>true</active>
        <description>Chatter Group(s) - Pricing - Telco Fix, Pricing - Telco Mobile, Pricing - ICT</description>
        <label>Pricing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical</fullName>
        <active>true</active>
        <description>Chatter Group(s) - Technical Approval</description>
        <label>Technical</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>